# llm4papers

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: black.yml  ruff.yml  tests.yml
llm4papers/: config.example.py  logger.py  models.py  prompts.py  service.py
llm4papers/editor_agents/: EditorAgent.py  OpenAIChatEditorAgent.py  prompts.py  test_DigitsEditorAgent.py  test_EditorAgent.py
llm4papers/paper_manager/: JSONFilePaperManager.py  __init__.py
llm4papers/paper_remote/: InMemoryPaperRemote.py  MultiDocumentPaperRemote.py  OverleafGitPaperRemote.py  PaperRemote.py  __init__.py  test_InMemoryPaperRemote.py  test_OverleafGitPaperRemote.py
test_data/dummy_overleaf_git_project/: main-0.tex  main-2.tex  main.tex
